--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
               colors: {
                 clifford: '#da373d',
                 'bike-primary': '#E76F51',
+                'bike-primary-bg': 'rgba(231, 111, 81, 0.1)',
               }
             }
           }
@@ -81,6 +82,69 @@
                 </div>
               </div>
         </navbar>
+        <!-- SLIDER/CAROUSEL -->
+        <div class="carousel w-full bg-bike-primary-bg lg:h-[550px]">
+            <!-- SLIDE 1 -->
+            <div id="slide1" class="carousel-item relative w-full">
+              <div class="flex flex-col lg:flex-row p-12 lg:p-24">
+                <!-- TEXT CONTENT -->
+               <div class="space-y-7 flex-1">
+                <h1 class="text-6xl font-bold">Ride-on R15 V4<br> with Smile</h1>
+               <p>~ Amet minim mollit non deserunt ullamco 
+                est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. ~</p>
+                <button class="btn bg-bike-primary text-white">Purchase</button>
+               </div>
+               <!-- IMAGE CONTENT -->
+                <div class="flex-1">
+                    <img class="w-[400px]" src="assets/images/slider/bike1.png" alt="">
+                </div>
+              </div>
+              <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                <a href="#slide3" class="btn btn-circle">❮</a>
+                <a href="#slide2" class="btn btn-circle">❯</a>
+              </div>
+            </div>
+            <!-- SLIDE 2 -->
+            <div id="slide2" class="carousel-item relative w-full">
+                <div class="flex flex-col lg:flex-row p-12 lg:p-24">
+                  <!-- TEXT CONTENT -->
+                 <div class="space-y-7 flex-1">
+                  <h1 class="text-6xl font-bold">Ride-on R15 V4<br> with Smile</h1>
+                 <p>~ Amet minim mollit non deserunt ullamco 
+                  est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. ~</p>
+                  <button class="btn bg-bike-primary text-white">Purchase</button>
+                 </div>
+                 <!-- IMAGE CONTENT -->
+                  <div class="flex-1">
+                      <img class="w-[400px]" src="assets/images/slider/bike2.png" alt="">
+                  </div>
+                </div>
+                <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                  <a href="#slide1" class="btn btn-circle">❮</a>
+                  <a href="#slide3" class="btn btn-circle">❯</a>
+                </div>
+              </div>
+            <!-- SLIDE 3 -->
+            <div id="slide3" class="carousel-item relative w-full">
+                <div class="flex flex-col lg:flex-row p-12 lg:p-24">
+                  <!-- TEXT CONTENT -->
+                 <div class="space-y-7 flex-1">
+                  <h1 class="text-6xl font-bold">Ride-on R15 V4<br> with Smile</h1>
+                 <p>~ Amet minim mollit non deserunt ullamco 
+                  est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. ~</p>
+                  <button class="btn bg-bike-primary text-white">Purchase</button>
+                 </div>
+                 <!-- IMAGE CONTENT -->
+                  <div class="flex-1">
+                      <img class="w-[400px]" src="assets/images/slider/bike3.png" alt="">
+                  </div>
+                </div>
+                <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                  <a href="#slide2" class="btn btn-circle">❮</a>
+                  <a href="#slide1" class="btn btn-circle">❯</a>
+                </div>
+              </div>
+          </div>
     </header>
      <!-- MAIN STARTS -->
       <!-- FOOTER STARTS -->
