LATEST BIKE COLLECTION added

--- a/index.html
+++ b/index.html
@@ -147,6 +147,19 @@
           </div>
     </header>
      <!-- MAIN STARTS -->
+      <main>
+        <!-- FEATURED BIKES -->
+         <div class="mt-[65px] lg:mt-[170px] text-center">
+            <h1 class="text-4xl lg:text-7xl font-bold">Fetured Bikes In This Year</h1>
+            <p class="text-2xl lg:text-4xl text-bike-primary">Best bike collection</p>
+         </div>
+         <!-- LATEST BIKE COLLECTION -->
+          <div class="lg:container lg:mx-auto flex flex-col lg:flex-row mt-[47px]">
+            <img class="flex-1 lg:w-[288px]" src="assets/images//slider/bike4.png" alt="">
+            <img class="flex-1 lg:w-[288px]" src="assets/images/slider/bike1.png" alt="">
+            <img class="flex-1 lg:w-[288px]" src="assets/images/slider/bike3.png" alt="">
+          </div>
+      </main>
       <!-- FOOTER STARTS -->
 </body>
 </html>
