Another latest bike collection part done

--- a/index.html
+++ b/index.html
@@ -159,6 +159,58 @@
             <img class="flex-1 lg:w-[288px]" src="assets/images/slider/bike1.png" alt="">
             <img class="flex-1 lg:w-[288px]" src="assets/images/slider/bike3.png" alt="">
           </div>
+          <!-- ANOTHER LATEST BIKE COLLECTION -->
+           <section class="my-24">
+                <h3 class="text-center text-5xl font-bold mb-12">Latest News</h3>
+           <!-- CARDS -->
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-12">
+                <!-- card 1 -->
+                <div class="card bg-base-100 shadow-xl">
+                    <figure>
+                      <img
+                        src="./assets/images/others/latest1.png"
+                        alt="Shoes" />
+                    </figure>
+                    <div class="card-body space-y-5">
+                      <h2 class="card-title">Ducati XDIAVEL S-73</h2>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                      <div class="card-actions">
+                        <button class="btn bg-bike-primary text-white">Read More</button>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- CARD 2 -->
+                <div class="card bg-base-100 shadow-xl">
+                    <figure>
+                      <img
+                        src="./assets/images/others/latest2.png"
+                        alt="Shoes" />
+                    </figure>
+                    <div class="card-body space-y-5">
+                      <h2 class="card-title">Ducati XDIAVEL S-73</h2>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                      <div class="card-actions">
+                        <button class="btn bg-bike-primary text-white">Read More</button>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- CARD 3 -->
+                <div class="card bg-base-100 shadow-xl">
+                    <figure>
+                      <img
+                        src="./assets/images/others/latest3.png"
+                        alt="Shoes" />
+                    </figure>
+                    <div class="card-body space-y-5">
+                      <h2 class="card-title">Ducati XDIAVEL S-73</h2>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                      <div class="card-actions">
+                        <button class="btn bg-bike-primary text-white">Read More</button>
+                      </div>
+                    </div>
+                  </div>
+            </div>
+           </section>
       </main>
       <!-- FOOTER STARTS -->
 </body>
