--- a/index.html
+++ b/index.html
@@ -147,14 +147,14 @@
           </div>
     </header>
      <!-- MAIN STARTS -->
-      <main>
+      <main class="md:container md:mx-auto">
         <!-- FEATURED BIKES -->
          <div class="mt-[65px] lg:mt-[170px] text-center">
             <h1 class="text-4xl lg:text-7xl font-bold">Fetured Bikes In This Year</h1>
             <p class="text-2xl lg:text-4xl text-bike-primary">Best bike collection</p>
          </div>
          <!-- LATEST BIKE COLLECTION -->
-          <div class="lg:container lg:mx-auto flex flex-col lg:flex-row mt-[47px]">
+          <div class="flex flex-col lg:flex-row mt-[47px]">
             <img class="flex-1 lg:w-[288px]" src="assets/images//slider/bike4.png" alt="">
             <img class="flex-1 lg:w-[288px]" src="assets/images/slider/bike1.png" alt="">
             <img class="flex-1 lg:w-[288px]" src="assets/images/slider/bike3.png" alt="">
@@ -211,7 +211,79 @@
                   </div>
             </div>
            </section>
+           <!-- happy clients -->
+            <!-- FAQ QUESTION -->
+            <section class="my-24">
+                <h3 class="text-center text-5xl font-bold mb-12">Frequently Asked <span class="text-bike-primary">Questions</span></h3>
+                <!-- HERO SECTION CONTENT -->
+                <div class="hero">
+                    <div class="hero-content flex-col lg:flex-row">
+                      <img
+                        src="assets/images/others/faq.png" />
+                      <div class="space-y-5">
+                        <div class="collapse collapse-arrow border border-blue-200">
+                            <input type="radio" name="my-accordion-2" checked="checked" />
+                            <div class="collapse-title text-xl font-medium">What are the most important things I should know about riding a bike?
+                        </div>
+                            <div class="collapse-content">
+                              <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. </p>
+                            </div>
+                          </div>
+                          <div class="collapse collapse-arrow border border-blue-200">
+                            <input type="radio" name="my-accordion-2" />
+                            <div class="collapse-title text-xl font-medium">How can I   tell if my helmet is old and I need a new one?
+                            </div>
+                            <div class="collapse-content">
+                              <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. </p>
+                            </div>
+                          </div>
+                          <div class="collapse collapse-arrow border border-blue-200">
+                            <input type="radio" name="my-accordion-2" />
+                            <div class="collapse-title text-xl font-medium">My bike has been in storage is it safe to ride?</div>
+                            <div class="collapse-content">
+                              <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. </p>
+                            </div>
+                          </div>
+                          <div class="collapse collapse-arrow border border-blue-200">
+                            <input type="radio" name="my-accordion-2" />
+                            <div class="collapse-title text-xl font-medium">My bike has been in storage is it safe to ride?</div>
+                            <div class="collapse-content">
+                              <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. </p>
+                            </div>
+                          </div>
+                          <div class="collapse collapse-arrow border border-blue-200">
+                            <input type="radio" name="my-accordion-2" />
+                            <div class="collapse-title text-xl font-medium">My bike has been in storage is it safe to ride?</div>
+                            <div class="collapse-content">
+                              <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. </p>
+                            </div>
+                          </div>
+                      </div>
+                    </div>
+                  </div>
+
+            </section>
       </main>
       <!-- FOOTER STARTS -->
+      <footer class="footer bg-black text-neutral-content p-10">
+        <aside>
+          <p>
+            ACME Industries Ltd.
+            <br />
+            Providing reliable tech since 1992
+          </p>
+        </aside>
+        <nav>
+          <h6 class="footer-title">Get the app</h6>
+          <div class="grid grid-cols-1 gap-4">
+            <a>
+              <img class="w-36" src="./assets/images/others/android.png" alt="">
+            </a>
+            <a>
+                <img class="w-36" src="./assets/images/others/ios.png" alt="">
+            </a>
+          </div>
+        </nav>
+      </footer>
 </body>
 </html>
